@@ -1,3 +1,7 @@
+2008-04-19  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* conf/PackageInfo.cmake: factor out packaging verbiage.
+
 2008-04-18  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/gui/cmdline.cpp: give help message when called with no
